<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/menuCollection"
        android:icon="@drawable/collections"
        android:title="@string/collections"
        />
    <item
        android:id="@+id/menuInbox"
        android:icon="@drawable/mail"
        android:onClick="onChatClick"
        android:title="@string/mail" />
    <item
        android:id="@+id/menuOrders"
        android:icon="@drawable/orders"
        android:title="@string/orders"
        />
    <item android:title="@string/others">
        <menu>

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support"
                android:title="@string/support"
                />
            <item
                android:id="@+id/menuAbout"
                android:icon="@drawable/about"
                android:title="@string/about"
                />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/exit"
                android:onClick="onExitClick"
                android:title="@string/exit"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>