<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity.StartActivity"
    android:padding="10sp">

    <ImageView
        android:layout_width="233dp"
        android:layout_height="327dp"
        app:srcCompat="@drawable/label"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/app_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/btn_login"
        android:backgroundTint="@color/black"
        android:text="@string/btn_login"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/btn_register"
        android:backgroundTint="@color/black"
        android:text="@string/registration"
        />

</LinearLayout>