<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity.RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/register_bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:layout_below="@id/register_toolbar">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/registration"
          android:textSize="40sp"
          android:textStyle="bold"/>

      <com.rengwuxian.materialedittext.MaterialEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/username"
          android:layout_marginTop="10dp"
          app:met_floatingLabel="normal"
          android:hint="@string/hint_user_name"
          android:textColor="@color/white"
          app:met_baseColor="@color/white"
          app:met_textColorHint="@color/white"
          android:layout_marginVertical="20dp"
          />
      <com.rengwuxian.materialedittext.MaterialEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/email"
          android:layout_marginTop="10dp"
          app:met_floatingLabel="normal"
          android:hint="@string/hint_email"
          android:textColor="@color/white"
          app:met_baseColor="@color/white"
          app:met_textColorHint="@color/white"
          android:inputType="textEmailAddress"
          android:layout_marginVertical="20dp"
          />
      <com.rengwuxian.materialedittext.MaterialEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/password"
          android:layout_marginTop="10dp"
          app:met_floatingLabel="normal"
          android:hint="@string/hint_password"
          android:textColor="@color/white"
          app:met_textColorHint="@color/white"
          app:met_baseColor="@color/white"
          android:inputType="textPassword"
          android:layout_marginVertical="20dp"
          />

        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/btn_register"
            android:backgroundTint="@color/black"
            android:text="@string/registration"/>


    </LinearLayout>


  </RelativeLayout>