<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CollectionActivity.ItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_collection_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:onClick="onBackClick"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:onClick="onBackClick"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:layout_below="@id/add_collection_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/item_name"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/item_image"
            android:layout_marginVertical="20dp"
            android:src="@drawable/collections"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_description"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tags"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/isFree"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/trade_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_700"
            android:text="@string/trade"
            android:textColor="@color/white"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_700"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/black" />


    </LinearLayout>



</RelativeLayout>